MODLOGINKC-34 JIT AuthUser creation in POST /authn/update (#99)
* JIT AuthUser creation in POST /authn/update

* search for user by name if user id is missing

* add model classes to sonar exclusions

* fix sonar issues