@@ -1,6 +1,5 @@
 package org.folio.login.service;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 import static org.folio.login.util.JwtUtils.extractTenant;
 import static org.folio.login.util.TokenRequestHelper.prepareCodeRequestBody;
@@ -42,7 +41,7 @@ public class KeycloakService {
 
   private static final String GRANT_TYPE_PASSWORD = "password";
   private final AdminTokenService adminTokenService;
-  private final KeycloakUserService userService;
+  private final KeycloakUserService keycloakUserService;
   private final KeycloakClient keycloakClient;
   private final FolioExecutionContext folioExecutionContext;
   private final RealmConfigurationProvider realmConfigurationProvider;
@@ -73,7 +72,7 @@ public class KeycloakService {
     log.debug("Logging out all user sessions [userId: {}]", userId);
     var tenantId = folioExecutionContext.getTenantId();
     var token = adminTokenService.getAdminToken(null, null);
-    var keycloakUserId = userService.findKeycloakUserIdByUserId(userId.toString(), token);
+    var keycloakUserId = keycloakUserService.findKeycloakUserIdByUserId(userId.toString(), token);
 
     logoutEventPublisher.publishLogoutAllEvent(keycloakUserId);
     keycloakClient.logoutAll(tenantId, keycloakUserId, token);
@@ -116,8 +115,8 @@ public class KeycloakService {
       var token = adminTokenService.getAdminToken(null, null);
       var tenantId = folioExecutionContext.getTenantId();
       var keycloakUserId = isNotEmpty(userId)
-        ? userService.findKeycloakUserIdByUserId(userId, token)
-        : userService.findKeycloakUserByUsername(userName, token).getId();
+        ? keycloakUserService.findKeycloakUserIdByUserId(userId, token)
+        : keycloakUserService.findKeycloakUserByUsername(userName, token).getId();
       var userCredentials = keycloakClient.getUserCredentials(tenantId, keycloakUserId, token);
 
       if (!userCredentials.isEmpty()) {
@@ -136,12 +135,12 @@ public class KeycloakService {
     var tenantId = folioExecutionContext.getTenantId();
     try {
       var token = adminTokenService.getAdminToken(null, null);
-      var keycloakUserId = userService.findKeycloakUserIdByUserId(userId, token);
+      var keycloakUserId = keycloakUserService.findKeycloakUserIdByUserId(userId, token);
       var userCredentials = keycloakClient.getUserCredentials(tenantId, keycloakUserId, token)
         .stream()
         .filter(credentials -> credentials.getType().equals(GRANT_TYPE_PASSWORD))
         .map(UserCredentials::getId)
-        .collect(toList());
+        .toList();
       if (userCredentials.isEmpty()) {
         throw new EntityNotFoundException("No credentials for userId " + userId + " found");
       }
@@ -155,7 +154,7 @@ public class KeycloakService {
     var tenantId = folioExecutionContext.getTenantId();
     try {
       var token = adminTokenService.getAdminToken(null, null);
-      var keycloakUserId = userService.findKeycloakUserIdByUserId(userId, token);
+      var keycloakUserId = keycloakUserService.findKeycloakUserIdByUserId(userId, token);
       var userCredentials = keycloakClient.getUserCredentials(tenantId, keycloakUserId, token);
       return new CredentialsExistence().credentialsExist(!userCredentials.isEmpty());
     } catch (FeignException cause) {
@@ -171,7 +170,7 @@ public class KeycloakService {
     var tenantId = folioExecutionContext.getTenantId();
     try {
       var token = adminTokenService.getAdminToken(null, null);
-      var keycloakUserId = userService.findKeycloakUserIdByUserId(userId, token);
+      var keycloakUserId = keycloakUserService.findKeycloakUserIdByUserId(userId, token);
       var kcPasswordReset = PasswordCredential.of(false, GRANT_TYPE_PASSWORD,
         newPassword);
       keycloakClient.updateCredentials(tenantId, keycloakUserId, kcPasswordReset, token);
